<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_margin="@dimen/height_width_10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_button_bg">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/height_width_30dp"
        android:layout_marginRight="@dimen/height_width_30dp"
        android:layout_marginBottom="@dimen/height_width_30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight=".85"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_18sp"
                android:text="@string/activation_details"/>

            <TextView
                android:background="@drawable/shape_button_bg"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="@dimen/height_width_30dp"
                android:text="@string/x"/>
        </LinearLayout>

        <TextView
            android:padding="@dimen/height_width_10dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16sp"
            android:text="@string/name"/>
        <TextView
            android:gravity="center_vertical"
            android:id="@+id/tv_name"
            android:paddingLeft="@dimen/height_width_15dp"
            android:textColor="@color/black"
            android:background="@drawable/shape_tv_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_width_40dp"/>
        <TextView
            android:padding="@dimen/height_width_10dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16sp"
            android:text="@string/number"/>
        <TextView
            android:id="@+id/tv_phone"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/height_width_15dp"
            android:textColor="@color/black"
            android:background="@drawable/shape_tv_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_width_40dp"/>

        <TextView
            android:padding="@dimen/height_width_10dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16sp"
            android:text="@string/id"/>
        <TextView
            android:id="@+id/tv_id"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/height_width_15dp"
            android:textColor="@color/black"
            android:background="@drawable/shape_tv_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_width_40dp"/>
    </LinearLayout>
</RelativeLayout>
