<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/shape_item_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_name"
        android:layout_margin="@dimen/padding_margin_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_margin_8dp"
        android:layout_marginLeft="@dimen/padding_margin_8dp"
        android:padding="@dimen/padding_margin_5dp"
        android:text="@string/number"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        />

    <View
        android:id="@+id/view"
        android:layout_marginTop="@dimen/padding_margin_8dp"
        android:layout_marginBottom="@dimen/padding_margin_8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C1C0C0"/>


    <TextView
        android:background="@drawable/shape_button_bg"
        android:textColor="@color/white"
        android:text="@string/pay_now"
        android:id="@+id/btn_pay"
        android:textAlignment="center"
        android:layout_margin="@dimen/padding_margin_8dp"
        android:layout_width="@dimen/height_width_100dp"
        android:layout_height="@dimen/height_width_45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintRight_toRightOf="@id/tv_work_id"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:gravity="center"/>

    <TextView
        android:textStyle="bold"
        android:textColor="#C1C0C0"
        android:textSize="@dimen/text_size_14sp"
        android:layout_margin="@dimen/padding_margin_8dp"
        android:padding="@dimen/padding_margin_5dp"
        android:text="@string/work"
        android:textAlignment="center"
        android:gravity="center"
        android:id="@+id/tv_work_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintLeft_toLeftOf="@id/btn_pay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>